<resources>
    <string name="app_name">CaptureSign</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_capture_signature">Capture Signature</string>
    <string name="external_dir">GetSignature</string>

    <string name="signature_capture_title">Signature Capture</string>
    <string name="btn_capture_signature">Capture Signature</string>

    <string name="btn_cancel">Cancel</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_undo">Undo</string>
    <string name="btn_save">Save</string>

    <string name="hint_your_name">Your Name</string>
    <string name="prompt_sign_below">Please sign below:</string>

    <string name="msg_signature_saved">Signature capture successful!</string>
    <string name="error_name_required">Name is required</string>
    <string name="error_save_failed">Error saving signature</string>
    <string name="error_permission_denied">Permission denied to write to External storage</string>
</resources>
